<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/white">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/divider_description">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:src="@drawable/flow"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_description">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/bungas">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:letterSpacing="0.1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:padding="12dp"
            android:fontFamily="serif-monospace"
            android:contentDescription="@string/login_description">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="serif-monospace"
            android:contentDescription="@string/username_label_description">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="13dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:inputType="text"
                android:autofillHints="username"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_marginBottom="7dp"
            android:fontFamily="serif-monospace"
            android:contentDescription="@string/password_label_description">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="13dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                android:background="@color/white"
                android:padding="10dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:fontFamily="monospace"
                android:layout_marginEnd="10dp"
                android:text="@string/login_button_text"
                android:contentDescription="@string/login_button_description"
                style="?attr/borderlessButtonStyle"
                android:layout_weight="1">
            </Button>

            <Button
                android:id="@+id/btnRegist"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:fontFamily="monospace"
                android:layout_marginStart="10dp"
                android:text="@string/register_button_text"
                android:contentDescription="@string/register_button_description"
                style="?attr/borderlessButtonStyle"
                android:layout_weight="1">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>